# linux-devicemap

./: .gitignore  PLAN.md  README.md  pyproject.toml
devicemap/: __init__.py  layout.py  monitor.py  server.py  snapshot.py  sysfs.py
devicemap/probes/: activity.py  audio.py  block.py  bt.py  dmi.py  drm.py  inputs.py  media.py  mmc.py  net.py  power.py  system.py  typec.py  usb.py
frontend/: app.js  icons.js  index.html  style.css
layouts/: dell-inc-latitude-9510.json  dell-inc-precision-3660.json
layouts/cards/: 10de-1ff2.json
